[package]
name = "palette"
version = "0.1.0"
authors = ["suke <suke083.tech@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
reqwest = "0.11.2"
smartcore = "0.2.0"
tokio = { version = "1.4.0", features = ["rt", "rt-multi-thread"] }